--- a/style.css
+++ b/style.css
@@ -21,23 +21,24 @@ main {
   margin: 0;
   border-right: 1px solid #eff3f4;
   border-left: 1px solid #eff3f4;
+  background-color: #f7f9fa;
 }
 
 aside {
   border-right: 1px solid #eff3f4;
   border-left: 1px solid #eff3f4;
-  background-color: #f7f9f9;
 }
 h2 {
-  font-size: 0.9rem;
-  font-weight: bold;
+  font-size: 1rem;
+  padding-bottom: 0.6rem;
 }
 
-h1 {
+h1,
+.header-aside {
   margin: 0;
   font-weight: bold;
   font-size: 1.2rem;
-  color: #1da1f2;
+  color: black;
 }
 
 a {
@@ -53,10 +54,6 @@ textarea,
   width: 100%;
 }
 
-.no-border {
-  border: none;
-}
-
 #site-search {
   background-color: #eceef0;
   border: none;
@@ -69,17 +66,37 @@ textarea,
   font-weight: bold;
   font-size: 1.5ch;
 }
+
+p,
+.sizing {
+  font-size: 10px;
+  font-weight: bold;
+  margin: 0.3rem 0 0.2rem 0;
+}
+
+h3 {
+  font-size: 14px;
+  font-weight: bold;
+  margin: 0;
+}
+
 /*Classes*/
 
+.no-border {
+  border: none;
+}
+
 .icon-nav {
-  width: 25px;
+  width: 35px;
+  padding: 7px;
+  border-radius: 50%;
 }
 
 .nav-icon-list {
   margin: 0;
   padding: 0;
   display: grid;
-  gap: 0.8rem;
+  gap: 0;
 }
 
 .nav-bar {
@@ -90,8 +107,7 @@ textarea,
 }
 
 .icons-main {
-  width: 30px;
-  padding: 5px;
+  padding: 7px;
   border-radius: 50%;
 }
 
@@ -100,19 +116,22 @@ textarea,
   min-height: 40px;
   display: grid;
   align-items: center;
-  padding: 0.3rem;
 }
 
 .second-box-main {
-  margin: 1rem;
+  margin: 0;
 }
 
 .color-twitter-blue {
   color: #1da1f2;
 }
 
+.color-faded-grey {
+  color: #9da8b2;
+}
+
 .search-box {
-  padding: 0.4rem 0 0 0.4rem;
+  margin-top: 0.3rem;
 }
 
 .button {
@@ -130,6 +149,29 @@ textarea,
   font-size: 1.5ch;
   border: none;
 }
+
+.profile-pic {
+  max-width: 40px;
+}
+
+.section-one-aside {
+  background-color: #f7f9f9;
+  border-radius: 1rem;
+  padding: 0.6rem;
+  margin-top: 2rem;
+}
+
+.border {
+  border-top: 1px solid #eff3f4;
+}
+
+.bg-color {
+  background-color: white;
+}
+
+.third-box-main {
+  margin-top: 0.5rem;
+}
 /*Grids*/
 
 .responsive-grid {
@@ -146,6 +188,15 @@ textarea,
   align-items: center;
 }
 
+.two-column-grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  align-items: flex-start;
+  gap: 0.3rem;
+  padding: 0.8rem 0 1rem 0;
+  min-height: 70px;
+}
+
 .two-column-grid-main {
   display: grid;
   grid-template-columns: 11fr 1fr;
@@ -155,14 +206,28 @@ textarea,
 
 .six-column-grid {
   display: grid;
-  grid-template-columns: repeat(5, 25px) minmax(0, 130px);
+  grid-template-columns: repeat(5, 30px) minmax(0, 200px);
   align-items: center;
-  gap: 0.4rem;
-  padding: 0;
   justify-items: end;
+  gap: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.two-column-grid-aside {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.image-aside {
+  max-width: 7rem;
+  border-radius: 0.8rem;
+  overflow: hidden;
+  padding: 1rem 0 1rem 0;
 }
 
 /*Animations*/
-.icons-main:hover {
+.icons-main:hover,
+.icon-nav:hover {
   background-color: #e8f5fe;
 }
